# acx-rms-fix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: acx-spec-explained.md  cli-reference.md  getting-started.md  gui-guide.md  troubleshooting.md
packaging/: acx_rms_fix.spec  fetch-ffmpeg.sh
packaging/icons/: acx-rms-fix.icns  generate_icon.py
src/acx_rms_fix/: __init__.py  cli.py  core.py  gui.py  report.py
tests/: conftest.py  fixtures.py  test_cli.py  test_core.py  test_gui_smoke.py  test_integration.py  test_report.py
