[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acx-rms-fix"
version = "0.1.3"
description = "Fix ACX audiobook rejection errors — RMS too low, peak too high, noise floor too high — in one command."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "acx",
    "audiobook",
    "rms",
    "mastering",
    "audible",
    "ffmpeg",
    "loudnorm",
    "narrator",
    "audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
acx-rms-fix = "acx_rms_fix.cli:main"
acx-rms-fix-gui = "acx_rms_fix.gui:main"

[project.urls]
Homepage = "https://github.com/torkian/acx-rms-fix"
Issues = "https://github.com/torkian/acx-rms-fix/issues"
Documentation = "https://github.com/torkian/acx-rms-fix#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acx_rms_fix = ["resources/*.png"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
